# uh50-fastapi

./: .Dockerignore  .coverage  .gitignore  .pylintrc  Dockerfile  README.rst  mkdocs.yml  pyproject.toml
docs/: index.md
scripts/: format.sh  lint.sh  test.sh
tests/: test_fastapi.py  test_test.py
uh50/: __init__.py  __main__.py
