[tool.poetry]
name = "uh50"
version = "0.1.0"
description = "Read out UltraHeat 50"
authors = ["Berry den Hartog <berrydenhartog@mailbox.org>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
uvicorn = "0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.4"
flake8 = "^4.0.1"
coverage = "^6.4.1"
mypy = "^0.961"
pytest = "^7.1.2"
isort = "^5.10.1"
autoflake = "^1.4"
mkdocs = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.coverage.paths]
source = ["uh50"]

[tool.coverage.run]
branch = true
source = ["uh50"]
omit = []

[tool.coverage.report]
fail_under = 99

[tool.isort]
profile = "black"

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
  "--strict-config",
  "--strict-markers"
]